Add link to official web in Justice

--- a/justice/css/index.css
+++ b/justice/css/index.css
@@ -228,6 +228,11 @@ textarea {
 	margin: 0 0 0 6px;
 }
 
+  .circle_logo {
+    display: block;
+    width: 55px;
+    fill: #FFFFFF
+  }
 /*clearfixの指定 //////////// */
 
 /*
