--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -244,7 +244,10 @@ section.content {
   li {
     flex-basis: 48%;
     a {
-      margin-bottom: 5px;
+      text-decoration: underline;
+      &:hover {
+        color: $color-accent;
+      }
     }
     img.main_image {
       width: 100%;
@@ -293,7 +296,6 @@ section.content {
         }
         dd {
           color: $color-dark;
-          width: 11rem;
         }
       }
     }
